Fixed some bugs on mobile

--- a/components/css/CarouselOfCourses.module.css
+++ b/components/css/CarouselOfCourses.module.css
@@ -12,7 +12,6 @@
   align-items: center;
   align-content: center;
   height: 80%;
-  padding: 30px;
 }
 
 .carouselButton {
@@ -42,7 +41,7 @@
   max-width: 300px; 
   max-height: 300px; 
   padding: 2%;
-  margin: 1.1rem;
+  margin: 3%;
 }
 
 .courseLink {
